--- a/index.html
+++ b/index.html
@@ -31,26 +31,36 @@
                 <div class="game-cards">
                     <div class="card">
                         <div class="card-content">
+                            <div class="level-badge">Level 3</div>
                             <h3>Power Box</h3>
+                            <div class="xp-info">
+                                <span class="current-xp">120 XP</span>
+                                <span class="next-level">/ 200 XP</span>
+                            </div>
                             <div class="progress-container">
                                 <div class="progress-bar">
-                                    <div class="progress-fill"></div>
-                                    <span class="progress-text">30%</span>
+                                    <div class="progress-fill" style="width: 60%"></div>
+                                    <span class="progress-text">60%</span>
                                 </div>
                             </div>
-                            <div class="score">Score: 0</div>
+                            <div class="score">Score: 1,250</div>
                         </div>
                     </div>
                     <div class="card">
                         <div class="card-content">
+                            <div class="level-badge">Level 2</div>
                             <h3>Money Box</h3>
+                            <div class="xp-info">
+                                <span class="current-xp">80 XP</span>
+                                <span class="next-level">/ 150 XP</span>
+                            </div>
                             <div class="progress-container">
                                 <div class="progress-bar">
-                                    <div class="progress-fill"></div>
-                                    <span class="progress-text">30%</span>
+                                    <div class="progress-fill" style="width: 45%"></div>
+                                    <span class="progress-text">45%</span>
                                 </div>
                             </div>
-                            <div class="score">Score: 0</div>
+                            <div class="score">Score: 850</div>
                         </div>
                     </div>
                     <div class="card">
