Add each game pages

--- a/games/power-box.html
+++ b/games/power-box.html
@@ -3,11 +3,11 @@
 <head>
     <title>Power Box Game</title>
     <link rel="stylesheet" href="../styles.css">
-    <link rel="stylesheet" href="power-box.css">
+    <link rel="stylesheet" href="games.css">
 </head>
 <body>
     <div class="game-container">
-        <header class="game-header">
+        <div class="game-header">
             <a href="../index.html" class="back-button">← Back</a>
             <h1>Power Box Game</h1>
             <div class="game-stats">
@@ -15,19 +15,15 @@
                 <span class="xp">120/200 XP</span>
                 <span class="score">Score: 1,250</span>
             </div>
-        </header>
+        </div>
         
-        <main class="game-content">
-            <div class="game-area">
-                <div class="question-box">
-                    <h2>How many blue #s?</h2>
-                    <div class="game-image">
-                        <img src="../images/Power-Box-game.png" alt="Power Box Game">
-                    </div>
-                    <button class="erase-btn">Erase</button>
-                </div>
+        <div class="game-content">
+            <h2>How many blue #s?</h2>
+            <div class="game-image">
+                <img src="../images/Power-Box-game.png" alt="Number Game">
             </div>
-        </main>
+            <button class="erase-btn">Erase</button>
+        </div>
     </div>
 </body>
 </html>
