--- a/games/teamwork.html
+++ b/games/teamwork.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Money Box Game</title>
+    <title>Teamwork Game</title>
     <link rel="stylesheet" href="../styles.css">
     <link rel="stylesheet" href="games.css">
 </head>
@@ -9,16 +9,16 @@
     <div class="game-container">
         <div class="game-header">
             <a href="../index.html" class="back-button">← Back</a>
-            <h1>Money Box Game</h1>
+            <h1>Teamwork Game</h1>
             <div class="game-stats">
-                <span class="level">Level 2</span>
-                <span class="xp">80/150 XP</span>
-                <span class="score">Score: 850</span>
+                <span class="level">Level 0</span>
+                <span class="xp">00/200 XP</span>
+                <span class="score">Score: 0</span>
             </div>
         </div>
         
         <div class="game-content">
-            <h2>Money Box Game</h2>
+            <h2>Teamwork Game</h2>
         </div>
     </div>
 </body>
