--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
                 <button class="menu-btn">News</button>
                 <button class="menu-btn">Games</button>
                 <button class="menu-btn">Events</button>
-                <button class="menu-btn">Updates</button>
             </div>
 
             <div class="stats">
@@ -26,79 +25,87 @@
 
         <!-- Main Content -->
         <div class="main-content">
-            <div class="game-container">
-                <h2>Student Guide Game</h2>
-                <div class="game-cards">
-                    <a href="games/power-box.html" class="card-link">
-                        <div class="card">
-                            <div class="card-content">
-                                <div class="level-badge">Level 3</div>
-                                <h3>Power Box</h3>
-                                <div class="xp-info">
-                                    <span class="current-xp">120 XP</span>
-                                    <span class="next-level">/ 200 XP</span>
-                                </div>
-                                <div class="progress-container">
-                                    <div class="progress-bar">
-                                        <div class="progress-fill" style="width: 60%"></div>
-                                        <span class="progress-text">60%</span>
-                                    </div>
-                                </div>
-                                <div class="score">Score: 1,250</div>
+            <h2>Student Guide Game</h2>
+            <div class="game-cards">
+                <a href="games/power-box.html" class="card-link">
+                    <div class="card">
+                        <div class="card-content">
+                            <div class="level-badge">Level 3</div>
+                            <h3>Power Box</h3>
+                            <div class="xp-info">
+                                <span class="current-xp">120 XP</span>
+                                <span class="next-level">/ 200 XP</span>
                             </div>
+                            <div class="progress-container">
+                                <div class="progress-bar">
+                                    <div class="progress-fill" style="width: 60%"></div>
+                                    <span class="progress-text">60%</span>
+                                </div>
+                            </div>
+                            <div class="score">Score: 1,250</div>
                         </div>
-                    </a>
+                    </div>
+                </a>
 
-                    <a href="money-box.html" class="card-link">
-                        <div class="card">
-                            <div class="card-content">
-                                <div class="level-badge">Level 2</div>
-                                <h3>Money Box</h3>
-                                <div class="xp-info">
-                                    <span class="current-xp">80 XP</span>
-                                    <span class="next-level">/ 150 XP</span>
-                                </div>
-                                <div class="progress-container">
-                                    <div class="progress-bar">
-                                        <div class="progress-fill" style="width: 45%"></div>
-                                        <span class="progress-text">45%</span>
-                                    </div>
-                                </div>
-                                <div class="score">Score: 850</div>
+                <a href="games/money-box.html" class="card-link">
+                    <div class="card">
+                        <div class="card-content">
+                            <div class="level-badge">Level 2</div>
+                            <h3>Money Box</h3>
+                            <div class="xp-info">
+                                <span class="current-xp">80 XP</span>
+                                <span class="next-level">/ 150 XP</span>
                             </div>
+                            <div class="progress-container">
+                                <div class="progress-bar">
+                                    <div class="progress-fill" style="width: 45%"></div>
+                                    <span class="progress-text">45%</span>
+                                </div>
+                            </div>
+                            <div class="score">Score: 850</div>
                         </div>
-                    </a>
+                    </div>
+                </a>
 
-                    <a href="paper-game.html" class="card-link">
-                        <div class="card">
-                            <div class="card-content">
-                                <h3>Paper Game</h3>
-                                <div class="progress-container">
-                                    <div class="progress-bar">
-                                        <div class="progress-fill"></div>
-                                        <span class="progress-text">0%</span>
-                                    </div>
-                                </div>
-                                <div class="score">Score: 0</div>
+                <a href="games/paper-game.html" class="card-link">
+                    <div class="card">
+                        <div class="card-content">
+                            <div class="level-badge">Level 0</div>
+                            <h3>Paper Game</h3>
+                            <div class="xp-info">
+                                <span class="current-xp">00 XP</span>
+                                <span class="next-level">/ 200 XP</span>
                             </div>
+                            <div class="progress-container">
+                                <div class="progress-bar">
+                                    <div class="progress-fill" style="width: 0%"></div>
+                                    <span class="progress-text">0%</span>
+                                </div>
+                            </div>
+                            <div class="score">Score: 0</div>
                         </div>
-                    </a>
+                    </div>
+                </a>
 
-                    <a href="teamwork.html" class="card-link">
-                        <div class="card">
-                            <div class="card-content">
-                                <h3>Teamwork</h3>
-                                <div class="progress-container">
-                                    <div class="progress-bar">
-                                        <div class="progress-fill"></div>
-                                        <span class="progress-text">0%</span>
-                                    </div>
-                                </div>
-                                <div class="score">Score: 0</div>
+                <a href="games/teamwork.html" class="card-link">
+                    <div class="card">
+                        <div class="card-content">
+                            <div class="level-badge">Level 0</div>
+                            <h3>Teamwork</h3>
+                            <div class="xp-info">
+                                <span class="current-xp">00 XP</span>
+                                <span class="next-level">/ 200 XP</span>
                             </div>
+                            <div class="progress-container">
+                                <div class="progress-bar">
+                                    <div class="progress-fill" style="width: 0%"></div>
+                                    <span class="progress-text">0%</span>
+                                </div>
+                            </div>
+                            <div class="score">Score: 0</div>
                         </div>
-                    </a>
-                </div>
+                    </div>
+                </a>
             </div>
 
             <div class="features">
