--- a/index.html
+++ b/index.html
@@ -8,19 +8,17 @@
     <div class="container">
         <!-- Sidebar -->
         <div class="sidebar">
+            <div class="points-badge">
+                <p>Points: <span id="points">0</span></p>
+                <p>Badges: <span id="badges">0</span></p>
+            </div>
             <div class="menu">
                 <button class="menu-btn">Home</button>
                 <button class="menu-btn">News</button>
                 <button class="menu-btn">Games</button>
                 <button class="menu-btn">Events</button>
+ 
             </div>
-
-            <div class="stats">
-                <p>Points: 0</p>
-                <p>Badges: 0</p>
-            </div>
-
-            <button class="menu-btn">Forum</button>
         </div>
 
         <!-- Main Content -->
