--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
                 <button class="menu-btn">News</button>
                 <button class="menu-btn">Games</button>
                 <button class="menu-btn">Events</button>
- 
             </div>
         </div>
 
@@ -111,6 +110,11 @@
                 <p>Interactive Quizzes</p>
             </div>
         </div>
+    </div>
+
+    <!-- New image container at the bottom of the page -->
+    <div class="image-container">
+        <img src="path/to/your/image.jpg" alt="Description" class="full-screen-image">
     </div>
     <script src="script.js"></script>
 </body>
