--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
                     </div>
                 </a>
 
-                <a href="games/paper-game.html" class="card-link">
+                <a href="games/puzzle-game.html" class="card-link">
                     <div class="card">
                         <div class="card-content">
                             <div class="level-badge">Level 0</div>
-                            <h3>Paper Game</h3>
+                            <h3>Puzzle-game.</h3>
                             <div class="xp-info">
                                 <span class="current-xp">00 XP</span>
                                 <span class="next-level">/ 200 XP</span>
@@ -109,12 +109,31 @@
                 <h3>Game Features</h3>
                 <p>Interactive Quizzes</p>
             </div>
+
+            <!-- New footer section -->
+            <footer class="footer">
+                <div class="feature-box">
+                    <h4>Achievements</h4>
+                    <p>Display user's achievements</p>
+                    <p>Motivate users</p>
+                </div>
+                <div class="feature-box">
+                    <h4>Leaderboard</h4>
+                    <p>Top Score Rankings</p>
+                    <p>Competition</p>
+                </div>
+                <div class="feature-box">
+                    <h4>Daily Quests</h4>
+                    <p>Daily Goals</p>
+                    <p>Continuous Participation</p>
+                </div>
+            </footer>
         </div>
     </div>
 
     <!-- New image container at the bottom of the page -->
     <div class="image-container">
-        <img src="path/to/your/image.jpg" alt="Description" class="full-screen-image">
+        <img src="images/cen-logo.png" alt="Description" class="full-screen-image">
     </div>
     <script src="script.js"></script>
 </body>
